--- a/api/Users/.htaccess
+++ b/api/Users/.htaccess
@@ -1,4 +1,9 @@
+#ErrorDocument 404 /mix/index.php
+
 RewriteEngine on
 RewriteRule .* - [E=HTTP_CONTENT_TYPE:%{HTTP:Content-Type}]
-RewriteRule ^([0-9]+)$ index.php?id=$1 [QSA,L]
-RewriteRule ^([0-9]+)/([a-z]+)$ index.php?$2=$1 [QSA,L]
+
+RewriteRule ^([0-9]+)$ user.php?id=$1 [QSA,L]
+RewriteRule ^([0-9]+)/([a-z]+)$ user.php?$2=$1 [QSA,L]
+
+RewriteRule ^(create)$ create_nw_usr.php [QSA,L]
