forgotten password request now works on API

--- a/api/v1/Members/.htaccess
+++ b/api/v1/Members/.htaccess
@@ -4,5 +4,6 @@ RewriteEngine on
 RewriteRule .* - [E=HTTP_CONTENT_TYPE:%{HTTP:Content-Type}]
 
 RewriteRule ^()$ index.php [QSA,L]
+RewriteRule ^([0-9]+)/(forgotten)$ forgotten.php?id=$1 [QSA,L]
+RewriteRule ^([0-9]+)/(forgotten/)(.+)$ forgotten.php?id=$1&key=$3 [QSA,L]
 #RewriteRule ^([^/].+)/logout$ force_exit.php?email=$1 [QSA,L]
-#RewriteRule ^([^/].+)/forgot$ forgotten.php?email=$1 [QSA,L]
