--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "homepage": "https://github.com/uvicate/Users",
     "require": {
         "php": ">=5.3.0",
-        "lichtner/fluentpdo": "dev-master"
+        "lichtner/fluentpdo": "dev-master",
+        "bshaffer/oauth2-server-php": "dev-develop"
         },
     "license": "MIT",
     "authors": [
