--- a/api/v1/Members/.htaccess
+++ b/api/v1/Members/.htaccess
@@ -2,6 +2,7 @@
 
 RewriteEngine on
 RewriteRule .* - [E=HTTP_CONTENT_TYPE:%{HTTP:Content-Type}]
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
 
 RewriteRule ^(.+)/(forgotten)$ forgotten.php?username=$1 [QSA,L]
